<resources>
    <string name="app_name">Fixture</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">Acerca de</string>
    <string name="jugadores">Jugadores</string>
    <string name="equipos">Equipos</string>
    <string name="vuelta">Ida y Vuelta</string>
    <string name="continuar">Continuar</string>
    <string name="title_activity_ingresar_jugadores">IngresarJugadores</string>
    <string name="inJugadores">Ingresar jugadores</string>
    <string name="siguiente">Siguiente</string>
    <string name="title_activity_mostrar_jugadores">mostrarJugadores</string>
    <string name="title_activity_cargar_jugadores">CargarJugadores</string>
    <string name="seguir">Seguir</string>
    <string name="title_activity_cargar_equipos">CargarEquipos</string>
    <string name="title_activity_fixture">Fixture</string>
    <string name="title_activity_mostrar_partidos">MostrarPartidos</string>
    <string name="title_activity_mostrar_equipos">MostrarEquipos</string>
    <string name="boton_partidos">PARTIDOS</string>
    <string name="view_posicion">Pos</string>
    <string name="view_puntos">PTS</string>
    <string name="view_jugados">PJ</string>
    <string name="view_ganados">PG</string>
    <string name="view_empatados">PE</string>
    <string name="view_perdidos">PP</string>
    <string name="view_favor">GF</string>
    <string name="view_contra">GC</string>
    <string name="view_diferencia">DIF</string>
    <string name="view_local">Local</string>
    <string name="view_visitante">Visitante</string>
    <string name="caps_jugadores">JUGADORES</string>
    <string name="volver">Volver</string>
    <string name="guardado">Guardado</string>


    <string name="error_menos_jugadores">No puede haber menos jugadores que equipos.</string>
    <string name="error_menos_equipos">No puede haber menos de dos equipos.</string>
    <string name="error_faltan_datos">Complete todos los datos.</string>
    <string name="error_falta_guardado">No hay torneos guardados.</string>
    <string name="Ver">Ver</string>
</resources>
